# tools

./: CMakeLists.txt  README.md  crp  dtk.packages  dtk5.packages  dtk6.packages  git-tag.py  install.sh  package-crp.py  tasks.md
src/: CMakeLists.txt  CrpPackagePage.qml  CrpQueryPage.qml  Main.qml  crpcontroller.cpp  crpcontroller.h  main.cpp  main.qrc  packageItem.h
src/utils/: singleton.hpp
